# crowdfunding-esdt

./: Cargo.toml  testnet.snippets.sh
logs/testnet/: testnet-deploy-outfile.interaction.json
meta/: Cargo.toml
scenarios/: _generated_fund.scen.json  _generated_init.scen.json  _generated_query_status.scen.json  _generated_sc_err.scen.json  crowdfunding-claim-failed.scen.json  crowdfunding-claim-successful.scen.json  crowdfunding-fund-too-late.scen.json  crowdfunding-fund.scen.json  crowdfunding-init.scen.json  egld-crowdfunding-claim-failed.scen.json  egld-crowdfunding-claim-successful.scen.json  egld-crowdfunding-fund-too-late.scen.json  egld-crowdfunding-fund.scen.json  egld-crowdfunding-init.scen.json
tests/: crowdfunding_esdt_rust_test.rs
wasm/: Cargo.toml
